--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 /* Variables 
 ----------------------------- */
 :root {
+  /* todo: OS/browser color theme mode */
+
   /* Colors */
   --bg: #C1C1F0;
   --dark: #141415;
@@ -73,8 +75,19 @@ body {
   position: relative;
 }
 
+ul li,
+ol li {
+  margin-bottom: 5px;
+}
+
+ul li:last-child,
+ol li:last-child {
+  margin-bottom: 0;
+}
+
 a,
 a:visited {
+  border-bottom: 2px solid transparent;
   color: var(--violet-d);
   text-decoration: none;
 }
@@ -82,32 +95,24 @@ a:visited {
 a:hover,
 a:focus {
   color: var(--violet-d);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-
-/* Layout 
------------------------------ */
-.site-container {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
-  height: 100lvh;
-  overflow: hidden;
-  padding: var(--site-gutter);
-  position: relative;
+a[href*='//']::after {
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18'%3E%3Cpath d='M4.435 1.607h9.9m0 0v9.899m0-9.9L1.607 14.335' stroke='%23452F8B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+  background-position: center right;
+  background-repeat: no-repeat;
+  content: '';
+  display: inline-block;
+  height: 14px;
+  margin-left: 15px;
+  vertical-align: middle;
+  width: 16px;
 }
 
-.site-header {
-  align-items: flex-start;
-  display: flex;
-  justify-content: space-between;
-}
-
-.hero {
-  display: grid;
-  place-content: center;
-  position: relative;
+a[href*='//']:hover,
+a[href*='//']:focus {
+  border-color: var(--violet-d);
 }
 
 
@@ -123,16 +128,36 @@ a:focus {
 }
 
 .radial {
+  aspect-ratio: 1 / 1;
   border-radius: 100%;
-  background: url('../images/noise.webp'), radial-gradient(50% 50% at 50% 50%, #430BFF 0%, #C1C1F0 100%);
+  background: url('../images/noise.webp'), radial-gradient(50% 50% at 50% 50%, var(--ultra-violet) 0%, var(--bg) 100%);
   background-blend-mode: overlay, normal;
   height: 100vh;
   left: 50%;
   position: absolute;
-  top: 0;
+  top: -35px;
   transform: translateX(-50%);
   width: 100vh;
   z-index: -5;
+}
+
+@media (min-width: 750px) {
+  .radial {
+    top: 0;
+  }
+}
+
+
+/* Site container 
+----------------------------- */
+.site-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+  height: 100lvh;
+  overflow: hidden;
+  padding: var(--site-gutter);
+  position: relative;
 }
 
 .section {
@@ -141,9 +166,43 @@ a:focus {
   padding-top: var(--section-pad);
 }
 
-.lkd {
+section.section {
+  padding-bottom: calc(5 * var(--section-pad));
+}
+
+
+/* Site top
+----------------------------- */
+.site-header {
+  align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nameplate {
   color: var(--violet);
   font-size: var(--base-font-size);
+  margin-bottom: 5px;
+}
+
+.main-nav {
+  text-align: right;
+}
+
+@media (max-width: 749px) {
+  .site-header .main-nav {
+    display: none;
+  }
+}
+
+
+/* Site middle
+----------------------------- */
+.hero {
+  display: grid;
+  height: 100%;
+  place-content: center;
+  position: relative;
 }
 
 .hero-headline {
@@ -151,11 +210,34 @@ a:focus {
   font-size: 10vw;
   font-style: italic;
   font-weight: 400;
-  line-height: 1;
-  margin-top: -60px;
+  line-height: 1.1;
+  margin-top: -5px;
 }
 
+@media (min-width: 750px) {
+  .hero-headline {
+    margin-top: -60px;
+  }
+}
+
+.hero-headline .nowrap:first-of-type {
+  transform: translateX(-5vw);
+}
+
+.hero-headline .nowrap:last-of-type {
+  transform: translateX(5vw);
+}
+
+
+/* Site bottom
+----------------------------- */
 .copyright {
   font-size: 0.75rem;
   margin: 0;
+}
+
+@media (min-width: 750px) {
+  .site-bottom .section--bottom-nav {
+    display: none;
+  }
 }
