--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,12 +132,12 @@ a[href*='//']:focus {
   border-radius: 100%;
   background: url('../images/noise.webp'), radial-gradient(50% 50% at 50% 50%, var(--ultra-violet) 0%, var(--bg) 100%);
   background-blend-mode: overlay, normal;
-  height: 100vh;
+  height: 100svh;
   left: 50%;
   position: absolute;
   top: -35px;
   transform: translateX(-50%);
-  width: 100vh;
+  width: 100svh;
   z-index: -5;
 }
 
@@ -154,7 +154,7 @@ a[href*='//']:focus {
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
-  height: 100lvh;
+  height: 100svh;
   overflow: hidden;
   padding: var(--site-gutter);
   position: relative;
@@ -207,7 +207,7 @@ section.section {
 
 .hero-headline {
   color: var(--dark);
-  font-size: 10vw;
+  font-size: 12vw;
   font-style: italic;
   font-weight: 400;
   line-height: 1.1;
@@ -216,6 +216,7 @@ section.section {
 
 @media (min-width: 750px) {
   .hero-headline {
+    font-size: 10vw;
     margin-top: -60px;
   }
 }
@@ -232,8 +233,14 @@ section.section {
 /* Site bottom
 ----------------------------- */
 .copyright {
-  font-size: 0.75rem;
+  font-size: 0.625rem;
   margin: 0;
+}
+
+@media (min-width: 425px) {
+  .copyright {
+    font-size: 0.75rem;
+  }
 }
 
 @media (min-width: 750px) {
