--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,20 +171,21 @@ a[href*='//']:focus {
 .radial {
   aspect-ratio: 1 / 1;
   border-radius: 100%;
-  background: url('../images/noise.webp'), radial-gradient(50% 50% at 50% 50%, var(--ultra-violet) 0%, var(--bg) 100%);
-  background-blend-mode: overlay, normal;
+  background: radial-gradient(50% 50% at 50% 50%, var(--ultra-violet) 0%, var(--bg) 100%);
   height: 100svh;
   left: 50%;
   position: absolute;
   top: -35px;
   transform: translateX(-50%);
   width: 100svh;
-  z-index: -5;
+  z-index: -15;
 }
 
 @media (min-width: 750px) {
   .radial {
     top: 0;
+    transform: translate(var(--mouse-x, -50%), var(--mouse-y, 0));
+    transition: transform 0.5s var(--ease-out);
   }
 }
 
