--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,12 +172,11 @@ a[href*='//']:focus {
   aspect-ratio: 1 / 1;
   border-radius: 100%;
   background: radial-gradient(50% 50% at 50% 50%, var(--ultra-violet) 0%, var(--bg) 100%);
-  height: 100svh;
+  min-height: 100svh;
   left: 50%;
   position: absolute;
   top: -35px;
   transform: translateX(-50%);
-  width: 100svh;
   z-index: -15;
 }
 
