--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,6 @@
 ----------------------------- */
 :root {
   /* Colors */
-  --light: #C1C1F0;
-  --light-l: #DADAf6;
   --dark: #141414;
   --violet: #7734FE;
   --violet-d: #553bab;
@@ -17,18 +15,18 @@
   --color-border: var(--violet-dd);
 
   /* Typography */
-  --base-font-size: 1rem;
+  --base-font-size: 16px;
   --font-serif: 'Editorial New', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
-  --font-sans: 'Supply Sans', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+  /* --font-sans: 'Supply Sans', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; */
 
   /* Measures */
   --border: 1px solid var(--color-border);
   --base-pad: 1rem;
   --base-margin: 1.5rem;
   --grid-gap: 3rem;
-  --section-pad: 3rem;
-  --section-margin: calc(4 * var(--base-margin));
-  --site-gutter: 2rem;
+  --main-content-offset-top: 2rem;
+  --section-margin: calc(3 * var(--base-margin));
+  --site-gutter: 3rem;
 
   /* Motion
   ------------------- */
@@ -36,23 +34,22 @@
   --ease-out: cubic-bezier(.165,.84,.44,1);
   --ease-in-out: cubic-bezier(0.65, 0, 0.35, 1);
   --ease-authentic-motion: cubic-bezier(0.4,0,0.2,1);
-}
-
-@media (min-width: 425px) {
-  :root {
-    --base-font-size: 1.125rem;
-  }
+  --cubic-screen-wipe: cubic-bezier(.79,.14,.15,.86);
 }
 
 @media (min-width: 750px) {
   :root {
     --grid-gap: 4.5rem;
-    --section-pad: 10rem;
+    --main-content-offset-top: 10rem;
+    --section-margin: calc(4 * var(--base-margin));
+    --site-gutter: 2rem;
   }
 }
 
 @media (min-width: 1024px) {
   :root {
+    --base-font-size: 18px;
+    --main-content-offset-top: 15rem;
     --site-gutter: 3rem;
   }
 }
@@ -60,12 +57,14 @@
 @media (min-width: 1440px) {
   :root {
     --grid-gap: 6rem;
+    --main-content-offset-top: 18rem;
   }
 }
 
 @media (min-width: 1800px) {
   :root {
-    --base-font-size: 1.25rem;
+    --base-font-size: 20px;
+    --main-content-offset-top: 11rem;
   }
 }
 
@@ -81,12 +80,28 @@
 }
 
 @font-face {
+  font-family: 'Editorial New';
+  src: url('../fonts/EditorialNew/PPEditorialNew-Italic.otf');
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+}
+
+/* @font-face {
+  font-family: 'Editorial New';
+  src: url('../fonts/EditorialNew/PPEditorialNew-Regular.otf');
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+} */
+
+/* @font-face {
   font-family: 'Supply Sans';
   src: url('../fonts/SupplySans/PPSupplySans-Regular.otf');
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-}
+} */
 
 
 /* Utility 
@@ -118,9 +133,11 @@
 body {
   background-color: var(--color-bg);
   color: var(--color-text);
-  font-family: var(--font-sans);
+  font-family: var(--font-serif);
   font-size: var(--base-font-size);
+  font-style: italic;
   font-weight: 400;
+  line-height: 1.6;
   overflow-x: hidden;
   padding: 0;
   position: relative;
@@ -188,6 +205,7 @@ a:focus {
   font-size: var(--base-font-size);
   font-style: italic;
   font-weight: 800;
+  line-height: 1.2;
   margin-bottom: var(--base-margin);
   padding-bottom: calc(var(--base-pad) / 2);
   position: relative;
@@ -214,10 +232,11 @@ a:focus {
   margin-left: auto;
   margin-right: auto;
   max-width: 45ch;
+  width: 100%;
 }
 
 .grid__main-content {
-  padding-top: var(--section-pad);
+  padding-top: var(--main-content-offset-top);
 }
 
 @media (min-width: 750px) {
@@ -240,7 +259,7 @@ a:focus {
 
 @media (min-width: 1440px) {
   .grid {
-    grid-template-columns: 1fr min(55ch, 100%) 1fr;
+    grid-template-columns: 1fr min(50ch, 100%) 1fr;
   }
 }
 
@@ -258,10 +277,79 @@ a:focus {
   z-index: 5;
 }
 
+@media (min-width: 1024px) {
+  .grid__name {
+    max-width: 100%;
+  }
+}
+
 .letter svg {
   height: auto;
 }
 
 .letter--o {
   transform: scale(1.4) translate(-10%, 15%);
+}
+
+
+/* Page Transition
+----------------------------- */
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes slide-down {
+  0% {
+    transform: translateY(0)
+  }
+  to {
+    transform: translateY(100%)
+  }
+}
+
+.screen-wipe {
+  animation: 
+    slide-down 1s var(--cubic-screen-wipe) 0.5s 1 forwards,
+    fade-out 0s linear 1.5s 1 forwards;
+  background-color: var(--ultra-violet);
+  color: white;
+  height: 100lvh;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  user-select: none;
+  width: 100%;
+  z-index: 15;
+}
+
+.screen-wipe--2 {
+  animation: 
+    slide-down 1s var(--cubic-screen-wipe) 1s 1 forwards,
+    fade-out 0s linear 2s 1 forwards;
+  background-color: #2e2e2e;
+}
+
+.screen-wipe--3 {
+  animation: 
+    slide-down 1s var(--cubic-screen-wipe) 1.25s 1 forwards,
+    fade-out 0s linear 2.25s 1 forwards;
+  background-color: #212121;
+}
+
+
+/* Absolute elements 
+----------------------------- */
+canvas.noise {
+  height: 100lvh;
+	opacity: 0.05;
+	pointer-events: none;
+  position: fixed;
+	user-select: none;
+  width: 100vw;
+  z-index: 9999;
 }
