--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,12 +303,13 @@ a:focus {
   }
 }
 
-@keyframes vanish {
+@keyframes fade-out {
   0% {
-    
+    opacity: 1;
   }
   to {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
   }
 }
 
@@ -331,33 +332,24 @@ a:focus {
 }
 
 .screen-wipe {
-  animation: 
-    slide-down 1s var(--cubic-screen-wipe) 0s 1 forwards,
-    vanish 0s linear 1s 1 forwards;
-  background-color: #2e2e2e;
+  animation: fade-out 0s linear 1s 1 forwards;
+  background-color: var(--color-bg);
   color: white;
   display: block;
   height: 100%;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   user-select: none;
   width: 100%;
   z-index: 15;
 }
 
-.screen-wipe--2 {
-  animation: 
-    slide-down 1s var(--cubic-screen-wipe) 0.5s 1 forwards,
-    vanish 0s linear 1.5s 1 forwards;
-  background-color: #212121;
-}
-
 
 /* Absolute elements 
 ----------------------------- */
 canvas.noise {
-  animation: scale-blur 0s var(--cubic-screen-wipe) 0.75s 1 forwards;
+  animation: scale-blur 0s var(--cubic-screen-wipe) 1s 1 forwards;
   height: 100%;
 	opacity: 0.05;
 	pointer-events: none;
