--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,11 @@
 ----------------------------- */
 :root {
   /* Colors */
-  --dark: #141414;
+  --midnight: #030303; 
+  --moonlight: #171717;
+  --shadow: #1F2225;
+  --light: #BABFC5;
+  --grey: #464D53;
   --violet: #7734FE;
   --violet-d: #6B50C3;
   --violet-dd: #5339A7;
@@ -12,13 +16,13 @@
   --color-name: var(--violet);
   --color-text: var(--violet-d);
   --color-heading: var(--violet-dd);
-  --color-bg: var(--dark);
+  --color-bg: var(--moonlight);
   --color-border: var(--violet-ddd);
 
   /* Typography */
   --base-font-size: 18px;
   --font-serif: 'Editorial New', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
-  /* --font-sans: 'Supply Sans', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace; */
+  --font-sans: 'Neue Montreal', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 
   /* Measures */
   --border: 1px solid var(--color-border);
@@ -40,7 +44,7 @@
 
 @media (min-width: 750px) {
   :root {
-    --base-font-size: 16px;
+    --base-font-size: 20px;
     --grid-gap: 4.5rem;
     --main-content-offset-top: 10rem;
     --section-margin: calc(4 * var(--base-margin));
@@ -56,28 +60,23 @@
 
 @media (min-width: 1440px) {
   :root {
-    --base-font-size: 18px;
+    --base-font-size: 24px;
+    --base-margin: 2rem;
     --grid-gap: 6rem;
-    --main-content-offset-top: 14rem;
+    --main-content-offset-top: 16rem;
+    --section-margin: calc(3 * var(--base-margin));
   }
 }
 
 @media (min-width: 1600px) {
   :root {
-    --main-content-offset-top: 18rem;
-  }
-}
-
-@media (min-width: 1800px) {
-  :root {
-    --main-content-offset-top: 14rem;
+    --main-content-offset-top: 19vw;
   }
 }
 
 @media (min-width: 2400px) {
   :root {
     --base-font-size: 20px;
-    --main-content-offset-top: 31rem;
   }
 }
 
@@ -100,21 +99,13 @@
   font-display: swap;
 }
 
-/* @font-face {
-  font-family: 'Editorial New';
-  src: url('../fonts/EditorialNew/PPEditorialNew-Regular.otf');
+@font-face {
+  font-family: 'Neue Montreal';
+  src: url('../fonts/NeueMontreal/PPNeueMontreal-Bold.otf');
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   font-display: swap;
-} */
-
-/* @font-face {
-  font-family: 'Supply Sans';
-  src: url('../fonts/SupplySans/PPSupplySans-Regular.otf');
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-} */
+}
 
 
 /* Utility 
@@ -150,7 +141,7 @@ body {
   font-size: var(--base-font-size);
   font-style: italic;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.5;
   overflow-x: hidden;
   padding: 0;
   position: relative;
@@ -212,6 +203,18 @@ a:focus {
   margin-bottom: var(--section-margin);
 }
 
+.section p,
+.section ul,
+.section ol {
+  margin-bottom: var(--base-margin);
+}
+
+.section p:last-child,
+.section ul:last-child,
+.section ol:last-child {
+  margin-bottom: 0;
+}
+
 .section__heading {
   color: var(--color-heading);
   font-family: var(--font-serif);
@@ -254,7 +257,7 @@ a:focus {
 
 @media (min-width: 750px) {
   .grid {
-    grid-template-columns: 2fr min(45ch, 100%);
+    grid-template-columns: 2fr min(35ch, 100%);
     margin-left: 0;
     margin-right: 0;
     max-width: 100%;
@@ -264,15 +267,21 @@ a:focus {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1040px) {
   .grid {
-    grid-template-columns: 2fr min(45ch, 100%) 1fr;
+    grid-template-columns: 2fr min(35ch, 100%) 1fr;
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   .grid {
-    grid-template-columns: 1fr min(50ch, 100%) 1fr;
+    gap: 10rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .grid {
+    grid-template-columns: 1fr min(35ch, 100%) 1fr;
   }
 }
 
@@ -282,10 +291,13 @@ a:focus {
 .grid__name {
   color: var(--color-name);
   display: grid;
-  gap: var(--base-margin);
+  gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(6, auto) 1fr;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 460px;
+  position: relative;
   width: 100%;
   z-index: 5;
 }
@@ -296,24 +308,48 @@ a:focus {
   }
 }
 
-.letter svg {
-  height: auto;
+.letter {
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: bottom;
 }
 
 .letter--o {
   transform: scale(1.4) translate(-10%, 15%);
 }
 
+.letter svg {
+  height: auto;
 
-/* Page Transition
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+.letter .animate-in {
+  animation-delay: 1.3s;
+}
+.letter:nth-child(2n) .animate-in {
+  animation-delay: 1.1s;
+}
+.letter:nth-child(3n) .animate-in {
+  animation-delay: 1.2s;
+}
+.letter:nth-child(4n) .animate-in {
+  animation-delay: 1.3s;
+}
+.letter:nth-child(5n) .animate-in {
+  animation-delay: 1.4s;
+}
+
+
+/* Animations
 ----------------------------- */
-@keyframes disappear {
+@keyframes animate-in {
   0% {
-    opacity: 1;
+    transform: translateY(-25%);
   }
   to {
-    opacity: 0;
-    visibility: hidden;
+    transform: translateY(0);
   }
 }
 
@@ -326,20 +362,16 @@ a:focus {
   }
 }
 
-@keyframes scale-blur {
-  0% {
-    transform: scale(5);
-  }
-  to {
-    transform: scale(1);
-  }
+.animate-in {
+  transform: translateY(-25%);
+  animation: animate-in 1s var(--ease-authentic-motion) 1 forwards;
 }
 
 .screen-wipe {
   animation: 
     slide-down 1s var(--cubic-screen-wipe) 0.5s 1 forwards,
     fade-out 0s linear 1.5s 1 forwards;
-  background-color: #2e2e2e;
+  background-color: var(--shadow);
   color: white;
   display: block;
   height: 100%;
@@ -355,7 +387,7 @@ a:focus {
   animation: 
     slide-down 1s var(--cubic-screen-wipe) 0.75s 1 forwards,
     fade-out 0s linear 1.75s 1 forwards;
-  background-color: #212121;
+  background-color: #1B1D1E;
 }
 .screen-wipe--3 {
   animation: 
@@ -367,15 +399,15 @@ a:focus {
 
 /* Absolute elements 
 ----------------------------- */
-canvas.noise {
-  animation: scale-blur 0s var(--cubic-screen-wipe) 1s 1 forwards;
-  background-color: var(--color-bg);
-  height: 100lvh !important;
-	opacity: 0.05;
-	pointer-events: none;
+.noise {
+  /* animation: scale-noise 0.95s linear 0s 1 forwards; */
+  background-image: url('../images/noise-2.gif');
+  background-position: center;
+  height: 100%;
+  opacity: 0.025;
+  pointer-events: none;
   position: fixed;
-  transform: scale(5);
-	user-select: none;
-  width: 100vw;
-  z-index: 9999;
+  user-select: none;
+  width: 100%;
+  z-index: 20;
 }
